RPS-97 fixed cut off close button by adding an important tag to override the css coming from jquery-ui which was hiding it. Double checked and added a zero in both places for the timer to be correct on the js function and also corrected a misspelling in the resource file

--- a/app_rapala_core/cartridge/scss/default/global/_jqueryui.scss
+++ b/app_rapala_core/cartridge/scss/default/global/_jqueryui.scss
@@ -15,7 +15,7 @@
     -moz-box-shadow: $nobel 0 0 10px;
     box-shadow: $nobel 0 0 10px;
     padding: 1px 0;
-    overflow: visible;
+    overflow: visible!important;
     .ui-widget-header {
         border: 0 none;
         border-radius: 0;
